{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 348,
  "lineage": "29c8bd09-8e58-e9e1-a464-719e8366530d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-ec2-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b73aa7c1d1b2e901",
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:instance/i-0f36ee165bcd44175",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web-ec2-instance-role",
            "id": "i-0f36ee165bcd44175",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dab5bff766bbdbc7",
            "private_dns": "ip-10-0-0-163.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.163",
            "public_ip": "13.230.165.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd934618663f7799",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bd70dfbb7e4bd27",
            "tags": {
              "Name": "web-ec2-1a"
            },
            "tags_all": {
              "Name": "web-ec2-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00130b6a8f1a81e16"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.instance_role",
            "aws_iam_role.access-ssm-role-for-ec2",
            "aws_security_group.web-ec2-sg",
            "aws_subnet.web-site-public_1a",
            "aws_vpc.web-site-vpc",
            "data.aws_ssm_parameter.amzn2_latest_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-ec2-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04906299798280420",
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:instance/i-0f4d435324be8d4db",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web-ec2-instance-role",
            "id": "i-0f4d435324be8d4db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0465ca038e4706c5d",
            "private_dns": "ip-10-0-1-231.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "public_ip": "18.182.46.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c9d75040981d773",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e724537518f64473",
            "tags": {
              "Name": "web-ec2-1c"
            },
            "tags_all": {
              "Name": "web-ec2-1c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00130b6a8f1a81e16"
            ]
          },
          "dependencies": [
            "aws_ami_from_instance.web-ec2-ami",
            "aws_iam_instance_profile.instance_role",
            "aws_iam_role.access-ssm-role-for-ec2",
            "aws_security_group.web-ec2-sg",
            "aws_subnet.web-site-public_1c",
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-site-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:internet-gateway/igw-0f6fd1cda056b1e17",
            "id": "igw-0f6fd1cda056b1e17",
            "owner_id": "445605964569",
            "tags": {
              "Name": "web-site-igw"
            },
            "tags_all": {
              "Name": "web-site-igw"
            },
            "vpc_id": "vpc-0ec6d3db3b979784a"
          },
          "dependencies": [
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f6fd1cda056b1e17",
            "id": "r-rtb-05dc4dd28b5fedeee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05dc4dd28b5fedeee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-site-igw",
            "aws_route_table.public-rtb",
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:route-table/rtb-05dc4dd28b5fedeee",
            "id": "rtb-05dc4dd28b5fedeee",
            "owner_id": "445605964569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6fd1cda056b1e17",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-site-vpc-public-rtb"
            },
            "tags_all": {
              "Name": "web-site-vpc-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec6d3db3b979784a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f3b0a1bb9f4f7b7",
            "route_table_id": "rtb-05dc4dd28b5fedeee",
            "subnet_id": "subnet-00bd70dfbb7e4bd27"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.web-site-public_1a",
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3a495d9bb63d432",
            "route_table_id": "rtb-05dc4dd28b5fedeee",
            "subnet_id": "subnet-0e724537518f64473"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.web-site-public_1c",
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:security-group/sg-00130b6a8f1a81e16",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALL",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00130b6a8f1a81e16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-ec2-sg",
            "name_prefix": "",
            "owner_id": "445605964569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-ec2-sg"
            },
            "tags_all": {
              "Name": "web-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec6d3db3b979784a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:security-group/sg-00d0757c9893ea900",
            "description": "For RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d0757c9893ea900",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Web Server",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00130b6a8f1a81e16"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "web-rds-sg",
            "name_prefix": "",
            "owner_id": "445605964569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-rds-sg"
            },
            "tags_all": {
              "Name": "web-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec6d3db3b979784a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from_web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Web Server",
            "from_port": 3306,
            "id": "sgrule-3084081214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d0757c9893ea900",
            "security_group_rule_id": "sgr-090ac92bcf7eaa873",
            "self": false,
            "source_security_group_id": "sg-00130b6a8f1a81e16",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-ec2-sg",
            "aws_security_group.web-rds-sg",
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-site-private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:subnet/subnet-0554b0a2cdf51385c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0554b0a2cdf51385c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445605964569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-site-private _1a"
            },
            "tags_all": {
              "Name": "web-site-private _1a"
            },
            "vpc_id": "vpc-0ec6d3db3b979784a"
          },
          "dependencies": [
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-site-private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:subnet/subnet-0a92b1738544e379e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a92b1738544e379e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445605964569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-site-private _1c"
            },
            "tags_all": {
              "Name": "web-site-private _1c"
            },
            "vpc_id": "vpc-0ec6d3db3b979784a"
          },
          "dependencies": [
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-site-public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:subnet/subnet-00bd70dfbb7e4bd27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bd70dfbb7e4bd27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445605964569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-site-public_1a"
            },
            "tags_all": {
              "Name": "web-site-public_1a"
            },
            "vpc_id": "vpc-0ec6d3db3b979784a"
          },
          "dependencies": [
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-site-public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:subnet/subnet-0e724537518f64473",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e724537518f64473",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445605964569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-site-public_1c"
            },
            "tags_all": {
              "Name": "web-site-public_1c"
            },
            "vpc_id": "vpc-0ec6d3db3b979784a"
          },
          "dependencies": [
            "aws_vpc.web-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-site-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:445605964569:vpc/vpc-0ec6d3db3b979784a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01bc593d829d1f8e6",
            "default_route_table_id": "rtb-0e68310f3fdaebbe5",
            "default_security_group_id": "sg-016fd0261703a6406",
            "dhcp_options_id": "dopt-0ae2d56d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec6d3db3b979784a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e68310f3fdaebbe5",
            "owner_id": "445605964569",
            "tags": {
              "Name": "web-site-vpc"
            },
            "tags_all": {
              "Name": "web-site-vpc"
            }
          }
        }
      ]
    }
  ]
}